--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,11 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+@media screen and (max-width: 768px) {
+    .container{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
