--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,43 @@ img {
     }
 }  
 
+@media screen and (max-width: 480px) {
+    .row{
+        flex-direction: column;
+    }
+
+    .container{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .lessons .col {
+        width: 100%;
+    }
+
+    .steps .col{
+        width: 100%;
+    }
+
+    .card{
+        width: 100%;
+    }
+
+    .why-us .col-left{
+        width: 100%;
+    }
+    .why-us .col-right {
+        width: 100%;
+        padding-top: 5rem;
+      }
+    .col{
+        margin-bottom: 2.5rem;
+    }
+    .why-us{
+        background-color: black;
+    }
+    .steps{
+        margin: 
+    }
+}
